refatoração da estrutura de pastas

--- a/alcool-ou-gasolina/index.html
+++ b/alcool-ou-gasolina/index.html
@@ -14,7 +14,7 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="stylesheet" href="css/alcool-ou-gasolina.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -54,9 +54,9 @@
                 <div class="col-md-6 mb-3">
                   <label class="form-label fw-semibold">Distância (km)</label>
                   <div class="input-group">
-                    <span class="input-group-text"
-                      ><i class="fas fa-road"></i
-                    ></span>
+                    <span class="input-group-text">
+                      <i class="fas fa-road"></i>
+                    </span>
                     <input
                       type="number"
                       class="form-control"
@@ -89,9 +89,9 @@
               </div>
 
               <div class="mb-4">
-                <label class="form-label fw-semibold"
-                  >Preço por Litro (R$)</label
-                >
+                <label class="form-label fw-semibold">
+                  Preço por Litro (R$)
+                </label>
                 <div class="input-group">
                   <span class="input-group-text">
                     <i class="fas fa-tag"></i>
@@ -130,7 +130,7 @@
       </div>
     </main>
 
-    <script src="js/alcool-ou-gasolina.js"></script>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
