--- a/formulario-animado/index.html
+++ b/formulario-animado/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulario animado</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <link rel="stylesheet" href="css/formulario-animado.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -44,6 +44,6 @@
       </div>
     </div>
 
-    <script src="js/formulario-animado.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
