--- a/max/index.html
+++ b/max/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jquery básico</title>
-    <link rel="stylesheet" href="css/max.css" />
+    <link rel="stylesheet" href="style.css" />
     <script
       src="https://code.jquery.com/jquery-4.0.0.min.js"
       integrity="sha256-OaVG6prZf4v69dPg6PhVattBXkcOWQB62pdZ3ORyrao="
@@ -23,6 +23,6 @@
       </div>
     </aside>
 
-    <script src="js/max.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
