--- a/imc/index.html
+++ b/imc/index.html
@@ -3,30 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cálculo IMC</title>
+    <title>Calculadora de IMC</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form name="imc">
-      <label for="peso">Seu peso em KG:</label>
-      <input
-        name="peso"
-        type="number"
-        step="0.1"
-        min="0"
-        placeholder="50"
-        required />
-      <label for="alt">Sua altura em M:</label>
-      <input
-        name="altura"
-        type="number"
-        step="0.01"
-        min="0"
-        placeholder="1.5"
-        required />
-      <button type="submit">Calcular IMC</button>
-    </form>
-    <p id="resultado"></p>
+    <main>
+      <h1>Calculadora de IMC</h1>
+
+      <form id="form-imc">
+        <div class="campo">
+          <label for="peso">Peso (kg)</label>
+          <input
+            type="number"
+            id="peso"
+            name="peso"
+            step="0.1"
+            min="0"
+            placeholder="ex: 68.5"
+            required />
+        </div>
+
+        <div class="campo">
+          <label for="altura">Altura (m)</label>
+          <input
+            type="number"
+            id="altura"
+            name="altura"
+            step="0.01"
+            min="0"
+            placeholder="ex: 1.68"
+            required />
+        </div>
+
+        <button type="submit">Calcular</button>
+      </form>
+
+      <div id="resultado" class="resultado"></div>
+    </main>
+
     <script src="script.js"></script>
   </body>
 </html>
