alterei o placeholder dos input

--- a/imc/index.html
+++ b/imc/index.html
@@ -19,7 +19,7 @@
             name="peso"
             step="0.1"
             min="0"
-            placeholder="ex: 68.5"
+            placeholder="Ex: 68.5"
             required />
         </div>
 
@@ -31,7 +31,7 @@
             name="altura"
             step="0.01"
             min="0"
-            placeholder="ex: 1.68"
+            placeholder="Ex: 1.68"
             required />
         </div>
 
