--- a/max/index.html
+++ b/max/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jquery básico</title>
+    <title>Max Verstappen</title>
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://code.jquery.com/jquery-4.0.0.min.js"
